# serde-big-array

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: array.rs  const_generics.rs  lib.rs
tests/: basic.rs  const.rs  const_expr.rs  const_generics.rs  const_path.rs  nested.rs  plus.rs  ser_xor_de.rs
